fixed bug with image on background by covering it

--- a/css/styles-merged.css
+++ b/css/styles-merged.css
@@ -56,6 +56,7 @@ body {
 
 .differences {
   background: url(../img/diff-bg.png) no-repeat;
+  background-size: cover;
 }
 
 .about {
@@ -281,7 +282,8 @@ body {
   .diff-title span img {
     max-width: 60vmin;
     bottom: -6.8vmin;
-    object-fit: contain;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
   .differences h4 {
     margin-top: -20px;
@@ -298,7 +300,8 @@ body {
     margin-right: 0;
     margin-bottom: 5vmin;
     shape-outside: none;
-    object-fit: contain;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
   
   .diff-icon {
@@ -308,7 +311,8 @@ body {
     max-height: 10vmin;
     max-width: 23.47222222222vmin;
     width: 100%;
-    object-fit: contain;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
 }
 
